Tue Oct 19 11:15:16 1999  Brian Gough  <bjg@network-theory.co.uk>

	* added the eigen value directory, eigen/

1999-08-30  Mark Galassi  <rosalia@lanl.gov>

	* gsl-config.in: started adding this script, for now cannibalized
	from gnome-config.

Fri Aug 20 11:10:54 1999  Brian Gough  <bjg@network-theory.co.uk>

	* support for IEEE on Tru64 from Tim Mooney

Mon Aug 16 21:10:23 1999  Brian Gough  <bjg@network-theory.co.uk>

	* added the minimization directory, min/

Fri Aug  6 11:15:58 1999  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in: removed need to configure for rand() and RAND_MAX
 	by providing a simple random number generator in the directories
 	that used rand().

1999-08-05  Mark Galassi  <rosalia@lanl.gov>

	* Makefile.am: put the THANKS file into the distribution.

	* autogen.sh: added the --add-missing option to automake.  I'm
	surprised it was not already there.

	* configure.in: added a + to the version, indicating that any
	snapshots made from anonymous CVS in this state should be
	interpreted as "after 0.4.1 and before the next version", and no
	other promises.

	* THANKS: added this THANKS file.  We appreciate all patches from
	people on the net, even those which are too small to warrant
	adding the author to the AUTHORS file.  The THANKS file should
	include everyone who sent in patches.  They should also be
	mentioned in the ChangeLog entry.

Sat May  8 21:06:31 1999  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in: now check for "extern inline" using a modified
 	version of AC_C_INLINE, since we use "extern inline" but only
 	checked for "inline", and some compilers only support the latter.

Sun Apr 11 20:40:35 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>

	* libraries and include files are now installed in pkglibdir and
	pkgincludedir (e.g. /usr/local/lib/gsl/ and
	/usr/local/include/gsl/ by default)

	* libraries are now built and installed separately

Mon Mar  1 15:41:25 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>
